--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,46 @@
 .App {
   text-align: center;
+  
 }
 
+.title {
+  display: flex;
 
+  text-align: center;
+  justify-content: center;
+  background-color: rgb(243, 239, 239);
+  padding: 20px;  
+}
+
+.image {
+  width:75px;
+  height: 75px;
+  border-radius: 100%;
+  
+}
+
+.footer {
+  text-align: center;
+  background-color: rgb(243, 239, 239);
+  padding: 20px;
+}
+
+.input-forms{
+  background-color: rgb(243, 239, 239);
+  width:30%;
+  
+  margin-left: 500px;
+  margin-right: 500px;
+  margin-top: 50px;
+  justify-content: center;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.form {
+  padding: 5px;
+  margin: 5px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
