--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,19 @@
 .form {
   padding: 5px;
   margin: 5px;
+  font-weight: bold;
 }
+
+.select-option{
+  margin-top: 30px;
+  padding:5px;
+  
+}
+
+
+
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
